# MailTaskServer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
project/: main.cpp
project/server/: server.cpp  server.h
project/server/room/: constexp.h  room.cpp  room.h
project/server/session/: constexp.h  session.cpp  session.h
project/test/: CMakeLists.txt  test.cpp
project/test/lib/googletest/: googletest-distribution.cbp
project/test/lib/googletest/googlemock/: gmock.cbp
project/test/lib/googletest/googletest/: gtest.cbp
